[package]
name = "compact-waitgroup"
version = "0.3.2"
edition = "2024"
rust-version = "1.88"
description = "A compact asynchronous WaitGroup synchronization primitive."
keywords = ["sync", "async", "waitgroup", "wake", "notify"]
categories = ["concurrency", "asynchronous", "no-std"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/chielo-org/compact-waitgroup"
repository = "https://github.com/chielo-org/compact-waitgroup"
documentation = "https://docs.rs/compact-waitgroup"
readme = "README.md"
exclude = ["release-plz.toml", ".github"]

[features]
portable-atomic = ["dep:portable-atomic"]
compact-mono = []

[dependencies]
derive_more = { version = "2.1.1", default-features = false, features = ["constructor", "debug", "deref", "into"] }
pin-project-lite = { version = "0.2.17", default-features = false }
portable-atomic = { version = "1.13.1", default-features = false, optional = true }

[dev-dependencies]
futures-executor = "0.3.32"
futures-test = "0.3.32"
static_assertions = "1.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(tsan)'] }

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.2", features = ["futures"] }
